ShapeKeys Lattice by the driver, problem updates in new depsgraph #46227

Closed
opened 2015-09-23 19:35:08 +02:00 by vladimir · 8 comments

System Information
ubuntu 14.04 - GeForce GTX 670

Blender Version
Broken: (2.75 --enable-new-depsgraph)
Worked: ( 2.75 and others )

Short description of error
Shape Key a Lattice controlled by the driver, is not updated

Exact steps for others to reproduce the error
red circles to control the ShapeKeys of the Lattice by the driver, in the new depsgraph updates do not occur.
https://drive.google.com/file/d/0B3lWkAmTtfLMSWNGenVqN2d3RXM/view?usp=sharing

**System Information** ubuntu 14.04 - GeForce GTX 670 **Blender Version** Broken: (2.75 --enable-new-depsgraph) Worked: ( 2.75 and others ) **Short description of error** Shape Key a Lattice controlled by the driver, is not updated **Exact steps for others to reproduce the error** red circles to control the ShapeKeys of the Lattice by the driver, in the new depsgraph updates do not occur. [https://drive.google.com/file/d/0B3lWkAmTtfLMSWNGenVqN2d3RXM/view?usp=sharing ](URL)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Vladimir-8

Added subscriber: @Vladimir-8
Author

2.76 in a similar situation

2.76 in a similar situation

This issue was referenced by f26a3f4bc5

This issue was referenced by f26a3f4bc59b7717f5d847a4b0c5bb6a9ba756a1

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

Sorry for the question to be solved in the new 2.76 or 2.75, too?

Sorry for the question to be solved in the new 2.76 or 2.75, too?

Added subscriber: @Sergey

Added subscriber: @Sergey

Attaching file here so it's never lost bug_lattice_update.blend

Attaching file here so it's never lost [bug_lattice_update.blend](https://archive.blender.org/developer/F1294710/bug_lattice_update.blend)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46227
No description provided.