Fix T46227: ShapeKeys Lattice by the driver, problem updates in new depsgraph

The issue was caused by driver referencing path outside of the key datablock.